added link to category-theory repo

--- a/index.html
+++ b/index.html
@@ -747,8 +747,8 @@ MathJax.Hub.Config({
   showProcessingMessages: false
 });
 </script>
-<title>index</title></head><body><article class="markdown-body"><h1>
+<title>README</title></head><body><article class="markdown-body"><h1>
 <a id="user-content-hi-im-luke-burns" class="anchor" href="#hi-im-luke-burns" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi, I'm Luke Burns</h1>
 
-<p>I'm a mathematical physicist and programmer. I am currently at the <a href="https://recurse.com/">Recurse Center</a> working on a <a href="https://github.com/lukeburns/peer-review">p2p peer review platform for scientists</a>, learning category theory, and trying to <a href="https://github.com/lukeburns/dirac">extend the Dirac equation to admit photons</a> in order to understand what the heck spin is. All of <a href="https://github.com/lukeburns">my projects are on Github</a>. This website contains writings about my projects and feelings.</p>
+<p>I'm a mathematical physicist and programmer. I am currently at the <a href="https://recurse.com/">Recurse Center</a> working on a <a href="https://github.com/lukeburns/peer-review">p2p peer review platform for scientists</a>, learning <a href="https://github.com/lukeburns/category-theory">category theory</a>, and trying to <a href="https://github.com/lukeburns/dirac">extend the Dirac equation to admit photons</a> in order to understand what the heck spin is. All of <a href="https://github.com/lukeburns">my projects are on Github</a>. This website contains writings about my projects and feelings.</p>
 </article></body></html>
