change to dirac text

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ MathJax.Hub.Config({
 <title>README</title></head><body><article class="markdown-body"><h1>
 <a id="user-content-hi-im-luke-burns" class="anchor" href="#hi-im-luke-burns" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi, I'm Luke Burns</h1>
 
-<p>I'm a mathematical physicist and programmer. I am currently at the <a href="https://recurse.com/">Recurse Center</a> working on a <a href="https://github.com/lukeburns/peer-review">p2p peer review platform for scientists</a>, learning <a href="https://github.com/lukeburns/category-theory">category theory</a>, and trying to <a href="https://github.com/lukeburns/dirac">modify Dirac theory to admit photons</a>. All of <a href="https://github.com/lukeburns">my projects are on Github</a>. I plan to use this website to write about my projects and feelings.</p>
+<p>I'm a mathematical physicist and programmer. I am currently at the <a href="https://recurse.com/">Recurse Center</a> working on a <a href="https://github.com/lukeburns/peer-review">p2p peer review platform for scientists</a>, learning <a href="https://github.com/lukeburns/category-theory">category theory</a>, and toying with an <a href="https://github.com/lukeburns/dirac">extension to the Dirac equation</a>. All of <a href="https://github.com/lukeburns">my projects are on Github</a>. I plan to use this website to write about my projects and feelings.</p>
 
 <p>Not much here yet! Come back soon.</p>
 </article></body></html>
