--- a/index.html
+++ b/index.html
@@ -750,7 +750,13 @@ MathJax.Hub.Config({
 <title>README</title></head><body><article class="markdown-body"><h1>
 <a id="user-content-hi-im-luke-burns" class="anchor" href="#hi-im-luke-burns" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi, I'm Luke Burns</h1>
 
-<p>I'm a mathematical physicist and programmer. I am currently at the <a href="https://recurse.com/">Recurse Center</a> working on a <a href="https://github.com/lukeburns/peer-review">p2p peer review platform for scientists</a>, learning <a href="https://github.com/lukeburns/category-theory">category theory</a>, and toying with an <a href="https://github.com/lukeburns/dirac">extension to the Dirac equation</a>. All of <a href="https://github.com/lukeburns">my projects are on Github</a>. I plan to use this website to write about my projects and feelings.</p>
+<p>I program a bunch and study physics a bunch. I recently attended the <a href="https://recurse.com">Recurse Center</a>, where I built a <a href="https://github.com/lukeburns/peer-events">p2p event emitter</a>, toyed with a model for <a href="https://github.com/lukeburns/peer-review">open peer review</a>, studied category theory, and worked on <a href="https://github.com/lukeburns/dirac">an extension of the Dirac equation</a>. All of my work is on <a href="https://github.com/lukeburns">Github</a>. Here is some of my work:</p>
 
-<p>Not much here yet! Come back soon.</p>
+<p><a href="https://github.com/lukeburns/dirac">An extension of the Dirac equation</a> (<a href="https://github.com/lukeburns/dirac/blob/master/dirac.pdf">pdf</a>)</p>
+
+<p><a href="https://github.com/lukeburns/gauge-duality">Gauging duality symmetry of the generalized Maxwell equations</a> (<a href="https://github.com/lukeburns/gauge-duality/blob/master/maxwell.pdf">pdf</a>)</p>
+
+<p><a href="https://github.com/lukeburns/geometric-algebra">An introduction to geometric algebra</a> (<a href="https://github.com/lukeburns/geometric-algebra/blob/master/intro.pdf">pdf</a>)</p>
+
+<p><a href="https://github.com/lukeburns/spinor-gauge-fields">Is it possible to construct spinor valued gauge fields?</a> (<a href="https://github.com/lukeburns/spinor-gauge-fields/blob/master/fermions.pdf">pdf</a>)</p>
 </article></body></html>
