--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ MathJax.Hub.Config({
 <title>README</title></head><body><article class="markdown-body"><h1>
 <a id="user-content-hi-im-luke-burns" class="anchor" href="#hi-im-luke-burns" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi, I'm Luke Burns</h1>
 
-<p>I program a bunch and study physics a bunch. I recently attended the <a href="https://recurse.com">Recurse Center</a>, where I built a <a href="https://github.com/lukeburns/peer-events">p2p event emitter</a>, toyed with a model for <a href="https://github.com/lukeburns/peer-review">open peer review</a>, studied category theory, and worked on <a href="https://github.com/lukeburns/dirac">an extension of the Dirac equation</a>. All of my work is on <a href="https://github.com/lukeburns">Github</a>. Here is some of my work:</p>
+<p>I program a bunch and study physics a bunch. I recently attended the <a href="https://recurse.com">Recurse Center</a>, where I built a <a href="https://github.com/lukeburns/peer-events">p2p event emitter</a>, toyed with a model for <a href="https://github.com/lukeburns/peer-review">open peer review</a>, studied category theory, and worked on <a href="https://github.com/lukeburns/dirac">an extension of the Dirac equation</a>. All of my work is on <a href="https://github.com/lukeburns">Github</a>. Here is my most recent work:</p>
 
 <p><a href="https://github.com/lukeburns/dirac">An extension of the Dirac equation</a> (<a href="https://github.com/lukeburns/dirac/blob/master/dirac.pdf">pdf</a>)</p>
 
