added maxwell derivation

--- a/index.html
+++ b/index.html
@@ -756,6 +756,8 @@ MathJax.Hub.Config({
 
 <p><a href="https://github.com/lukeburns/gauge-duality">Gauging duality symmetry of the generalized Maxwell equations</a> (<a href="https://github.com/lukeburns/gauge-duality/blob/master/maxwell.pdf">pdf</a>)</p>
 
+<p><a href="https://github.com/lukeburns/maxwells-equations">Maxwell's equations from a bounded current</a> (<a href="https://github.com/lukeburns/maxwells-equations/blob/master/maxwell.pdf">pdf</a>)</p>
+
 <p><a href="https://github.com/lukeburns/geometric-algebra">An introduction to geometric algebra</a> (<a href="https://github.com/lukeburns/geometric-algebra/blob/master/intro.pdf">pdf</a>)</p>
 
 <p><a href="https://github.com/lukeburns/spinor-gauge-fields">Is it possible to construct spinor valued gauge fields?</a> (<a href="https://github.com/lukeburns/spinor-gauge-fields/blob/master/fermions.pdf">pdf</a>)</p>
