clarify projects are under active development

--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ MathJax.Hub.Config({
 
 <p>I program a bunch and study physics a bunch. I recently attended the <a href="https://recurse.com">Recurse Center</a>, where I built a <a href="https://github.com/lukeburns/peer-events">p2p event emitter</a>, toyed with a model for <a href="https://github.com/lukeburns/peer-review">open peer review</a>, studied some category theory, and worked on <a href="https://github.com/lukeburns/dirac">an extension of the Dirac equation</a>. All of my work is on <a href="https://github.com/lukeburns">Github</a>. </p>
 
-<p>Below is a list of projects I've been working on recently. Each project has a Github repository with a full version history, TeX source, open issues, and a most recent pdf build. You're welcome to open an issue, or fork and submit a pull request with improvements.</p>
+<p>Below is a list of projects I am currently actively working on. Each project has a Github repository with a full version history, TeX source, open issues, and a most recent pdf build. You're welcome to open an issue, or fork and submit a pull request with improvements.</p>
 
 <p><a href="https://github.com/lukeburns/gauge-duality">Gauging duality symmetry of the generalized Maxwell equations</a> (<a href="https://github.com/lukeburns/gauge-duality/blob/master/gauge-duality.pdf">pdf</a>) It is shown that duality symmetry of the generalized Maxwell's equations (with magentic sources) can be gauged. Because the newly introduced gauge field is indistinguishable from an electromagnetic gauge field, it is suggested that the coupling could describe non-linear interactions between electromagnetic fields.</p>
 
