--- a/index.html
+++ b/index.html
@@ -754,11 +754,11 @@ MathJax.Hub.Config({
 
 <p>Below is a list of projects I am currently actively working on. Each project has a Github repository with a full version history, TeX source, open issues, and a most recent pdf build. You're welcome to open an issue, or fork and submit a pull request with improvements.</p>
 
+<p><a href="https://github.com/lukeburns/maxwells-equations">The Continuity Equation Implies Maxwell's Equations</a> (<a href="https://github.com/lukeburns/maxwells-equations/blob/master/maxwell.pdf">pdf</a>) It is shown that the antiderivative of a coclosed (closed) multivector field fails to be closed (coclosed) by at most a harmonic term, from which it follows that \emph{any} vector valued current density $J$ in four dimensions that is conserved (i.e. is coclosed) possesses a bivector valued antiderivative $F$ that satisfies Maxwell's equations $\partial F = J$ under physically reasonable boundary conditions.</p>
+
 <p><a href="https://github.com/lukeburns/gauge-duality">Gauging duality symmetry of the generalized Maxwell equations</a> (<a href="https://github.com/lukeburns/gauge-duality/blob/master/gauge-duality.pdf">pdf</a>) It is shown that duality symmetry of the generalized Maxwell's equations (with magentic sources) can be gauged. Because the newly introduced gauge field is indistinguishable from an electromagnetic gauge field, it is suggested that the coupling could describe non-linear interactions between electromagnetic fields.</p>
 
 <p><a href="https://github.com/lukeburns/dirac">An extension of the Dirac equation</a> (<a href="https://github.com/lukeburns/dirac/blob/master/dirac.pdf">pdf</a>) A minimal extension of the Dirac equation is shown to describe a pair of massless, electrically charged fermions. Solutions exhibit rotation in the particle's spin plane, analogous to the zitterbewegung of massive Dirac theory and identical to electric and magnetic fields of circularly polarized electromagnetic waves.</p>
-
-<p><a href="https://github.com/lukeburns/maxwells-equations">Maxwell's equations from the continuity equation</a> (<a href="https://github.com/lukeburns/maxwells-equations/blob/master/maxwell.pdf">pdf</a>)</p>
 
 <p><a href="https://github.com/lukeburns/geometric-algebra">An introduction to geometric algebra</a> (<a href="https://github.com/lukeburns/geometric-algebra/blob/master/intro.pdf">pdf</a>)</p>
 
