--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ MathJax.Hub.Config({
 
 <p>I program a bunch and study physics a bunch. I recently attended the <a href="https://recurse.com">Recurse Center</a>, where I built a <a href="https://github.com/lukeburns/peer-events">p2p event emitter</a>, toyed with a model for <a href="https://github.com/lukeburns/peer-review">open peer review</a>, studied some category theory, and worked on <a href="https://github.com/lukeburns/dirac">an extension of the Dirac equation</a>. All of my work is on <a href="https://github.com/lukeburns">Github</a>. </p>
 
-<p>Below is a list of projects I am currently actively working on. Each project has a Github repository with a full version history, TeX source, open issues, and a most recent pdf build. You're welcome to open an issue, or fork and submit a pull request with improvements.</p>
+<p>Below is a list of math and physics projects that are bopping around in my brain and I return to from time to time. Each project has a Github repository with a full version history, TeX source, open issues, and a most recent pdf build. You're welcome to open an issue, or fork and submit a pull request with improvements.</p>
 
 <p><a href="https://github.com/lukeburns/maxwells-equations">When does the continuity equation imply Maxwell's equations?</a> (<a href="https://github.com/lukeburns/maxwells-equations/blob/master/maxwell.pdf">pdf</a>) A fundamental result of electrodynamics is that Maxwell's equations imply that charge is locally conserved. Here we show that local charge conservation implies the existence of fields satisfying Maxwell's equations.</p>
 
