--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@ MathJax.Hub.Config({
 <title>README</title></head><body><article class="markdown-body"><h1>
 <a id="user-content-hi-im-luke-burns" class="anchor" href="#hi-im-luke-burns" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hi, I'm Luke Burns</h1>
 
-<p>I program a bunch and study physics a bunch. I recently attended the <a href="https://recurse.com">Recurse Center</a>, where I built a <a href="https://github.com/lukeburns/peer-events">p2p event emitter</a>, toyed with a model for <a href="https://github.com/lukeburns/peer-review">open peer review</a>, studied some category theory, and worked on <a href="https://github.com/lukeburns/dirac">an extension of the Dirac equation</a>. All of my work is on <a href="https://github.com/lukeburns">Github</a>. </p>
+<p>I study math and physics, and code some. All of my work is on Github.</p>
 
 <p>Below is a list of math and physics projects that are bopping around in my brain and I return to from time to time. Each project has a Github repository with a full version history, TeX source, open issues, and a most recent pdf build. You're welcome to open an issue, or fork and submit a pull request with improvements.</p>
 
