--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       with improvements.</p>
 
     <h4><strong>Maxwell's equations are universal for locally conserved quantities</strong> <a href="https://github.com/lukeburns/maxwells-equations"><i class="fab fa-github"></i></a> <a href="https://arxiv.org/abs/1906.02675"><i
-          class="ai ai-arxiv"></i></a></h4>
+          class="ai ai-arxiv"></i></a> <a href="https://doi.org/10.1007/s00006-019-0979-7"><i
+          class="ai ai-springer"></i></a></h4>
     <p>A fundamental result of classical electromagnetism is that Maxwell's equations imply that electric charge is locally conserved. Here we show the converse: Local charge conservation implies the local existence of fields satisfying Maxwell's
       equations. This holds true for any conserved quantity satisfying a continuity equation. It is obtained by means of a strong form of the Poincaré lemma presented here that states: Divergence-free multivector fields locally possess curl-free
       antiderivatives on flat manifolds. The above converse is an application of this lemma in the case of divergence-free vector fields in spacetime. We also provide conditions under which the result generalizes to curved manifolds.</p>
