--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <h4><strong>Can duality symmetry of Maxwell's equations be gauged?</strong> <a href="https://github.com/lukeburns/gauge-duality"><i class="fab fa-github"></i></a></h4>
     <p>It is argued that duality symmetry of the generalized Maxwell's equations (with magentic sources) <em>can</em> be gauged in the usual way, and that arguments against incorrectly assume a particular form of potential or Lagrangian.</p>
   </main>
+  <footer>
+     <p><a href="https://webring.recurse.com"><img src="https://webring.recurse.com/icon.png" style="width: 25px;"></a></p>
+  </footer>
 </body>
 
 </html>
