--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
   <main class="markdown-body">
     <h1>Hi, I'm Luke Burns</h1>
 
-    <p>I study math and physics, and code some. My work is on <a href="https://github.com/lukeburns">Github <i class="fab fa-github"></i></a>. Below is a list of projects of mine. You're welcome to open an issue, or fork and submit a pull request
-      with improvements.</p>
+    <p>I study math and physics, and code some. Most of my work is on <a href="https://github.com/lukeburns">Github <i class="fab fa-github"></i></a>. Below is a list of projects I've worked on. If you see a Github icon <i class="fab fa-github"></i>, please feel free to open an issue, or fork and submit a pull request with improvements.</p>
+
+      <h4><strong>Acoustic field theory: scalar, vector, spinor representations and the emergence of acoustic spin
+</strong> <a href="https://github.com/lukeburns/maxwells-equations"> <a href="https://arxiv.org/abs/1912.10522"><i
+            class="ai ai-arxiv"></i></a></h4>
+<p>We construct a novel Lagrangian representation of acoustic field theory that accounts for the local vector properties of longitudinal (curl-free) acoustic fields. In particular, this approach describes the recently-discovered nonzero spin angular momentum density in inhomogeneous sound fields in fluids or gases. The traditional acoustic Lagrangian representation with a scalar potential is unable to describe such vector properties of acoustic fields adequately, which are however observable via local radiation forces and torques on small probe particles. By introducing a displacement vector potential analogous to the electromagnetic vector potential, we derive the appropriate canonical momentum and spin densities as conserved Noether currents. The results are consistent with recent theoretical analyses and experiments. Furthermore, by an analogy with dual-symmetric electromagnetic field theory that combines electric- and magnetic-potential representations, we put forward an acoustic spinor representation combining the scalar and vector representations. This approach also includes naturally coupling to sources. The strong analogies between electromagnetism and acoustics suggest further productive inquiry, particularly regarding the nature of the apparent spacetime symmetries inherent to acoustic fields.</p>
 
     <h4><strong>Maxwell's equations are universal for locally conserved quantities</strong> <a href="https://github.com/lukeburns/maxwells-equations"><i class="fab fa-github"></i></a> <a href="https://arxiv.org/abs/1906.02675"><i
           class="ai ai-arxiv"></i></a> <a href="https://doi.org/10.1007/s00006-019-0979-7"><i
           class="ai ai-springer"></i></a></h4>
-    <p>A fundamental result of classical electromagnetism is that Maxwell's equations imply that electric charge is locally conserved. Here we show the converse: Local charge conservation implies the local existence of fields satisfying Maxwell's
-      equations. This holds true for any conserved quantity satisfying a continuity equation. It is obtained by means of a strong form of the Poincaré lemma presented here that states: Divergence-free multivector fields locally possess curl-free
-      antiderivatives on flat manifolds. The above converse is an application of this lemma in the case of divergence-free vector fields in spacetime. We also provide conditions under which the result generalizes to curved manifolds.</p>
+    <p>A fundamental result of classical electromagnetism is that Maxwell's equations imply that electric charge is locally conserved. Here we show the converse: Local charge conservation implies the local existence of fields satisfying Maxwell's equations. This holds true for any conserved quantity satisfying a continuity equation. It is obtained by means of a strong form of the Poincaré lemma presented here that states: Divergence-free multivector fields locally possess curl-free antiderivatives on flat manifolds. The above converse is an application of this lemma in the case of divergence-free vector fields in spacetime. We also provide conditions under which the result generalizes to curved manifolds.</p>
 
     <h4><strong>An extension of the Dirac equation</strong> <a href="https://github.com/lukeburns/dirac"><i class="fab fa-github"></i></a></h4>
-    <p>A minimal extension of the Dirac equation is shown to describe a pair of massless, electrically charged fermions. Solutions exhibit rotation in the particle's spin plane, analogous to the zitterbewegung of massive Dirac theory and identical to
-      electric and magnetic fields of circularly polarized electromagnetic waves.</p>
+    <p>A minimal extension of the Dirac equation is shown to describe a pair of massless, electrically charged fermions. Solutions exhibit rotation in the particle's spin plane, analogous to the zitterbewegung of massive Dirac theory and identical to electric and magnetic fields of circularly polarized electromagnetic waves.</p>
 
     <h4><strong>Can duality symmetry of Maxwell's equations be gauged?</strong> <a href="https://github.com/lukeburns/gauge-duality"><i class="fab fa-github"></i></a></h4>
     <p>It is argued that duality symmetry of the generalized Maxwell's equations (with magentic sources) <em>can</em> be gauged in the usual way, and that arguments against incorrectly assume a particular form of potential or Lagrangian.</p>
