--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </main>
   <footer>
      <a href="https://webring.recurse.com"><img src="https://webring.recurse.com/icon.png" style="width: 25px;"></a>
+     <script async defer src="https://www.recurse-scout.com/loader.js?t=1476e752aaa22c2791e69a1578f9639e"></script>
   </footer>
 </body>
 
